- fixed nav display issues on tablet size (>769px && <992px)

--- a/SiteAssets/css/layout/nav.sass
+++ b/SiteAssets/css/layout/nav.sass
@@ -52,3 +52,13 @@ nav
 
       .sidenav-trigger
         margin: 0
+
+@media only screen and (min-width: 768px) and (max-width: 992px)
+  nav
+    padding: 0 0 0 .75em
+
+    .nav-wrapper
+      .nav-items
+        .nav-item
+          .nav-link
+            padding: 0 .75em
