--- a/SiteAssets/css/pages/index.sass
+++ b/SiteAssets/css/pages/index.sass
@@ -132,6 +132,7 @@
 
     .btn
       margin-right: 1em
+      margin-bottom: 1em
 
       i
         vertical-align: top
